# basic-opengl

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  compile.sh
include/: config.hpp.in  program.hpp  shader.hpp
resources/shaders/: basic_fs.glsl  basic_vs.glsl  cube_fs.glsl  cube_vs.glsl
src/: main.cpp  program.cpp  shader.cpp
